# shielded-state-sync

./: .gitignore  Benchmark.md  Cargo.toml  Makefile  README.md  signature
.github/workflows/: rust.yml
fuzzy-message-detection/: Cargo.toml
fuzzy-message-detection-sgx/: Makefile  sgx_environment_set_up.md
fuzzy-message-detection-sgx/app/: Cargo.toml
fuzzy-message-detection-sgx/enclave/: Cargo.toml  Xargo.toml  config.xml
fuzzy-message-detection-sgx/enclave/src/: lib.rs
fuzzy-message-detection/benches/: benchmark.rs
fuzzy-message-detection/examples/: basic.rs  compact.rs
fuzzy-message-detection/src/: combiner.rs  fmd2.rs  fmd2_generic.rs  lib.rs
fuzzy-message-detection/src/fmd2/: borsh_serialization.rs
fuzzy-message-detection/src/fmd2_compact/: mod.rs  polynomial.rs
fuzzy-message-detection/src/fmd2_poly/: mod.rs  polynomial.rs
polyfuzzy/: Cargo.toml
polyfuzzy/benches/: benchmark.rs
polyfuzzy/examples/: basic.rs  compact.rs
polyfuzzy/src/: fmd2.rs  fmd2_generic.rs  lib.rs  multifmd1.rs  structs.rs
polyfuzzy/src/compact/: mod.rs  polynomial.rs
polyfuzzy/src/fmd2_compact/: mod.rs  polynomial.rs
