[workspace]
members = [
    "polyfuzzy",
]

resolver = "2"

[workspace.dependencies]
criterion = "0.3"
curve25519-dalek = { version = "4.1.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0.217", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
subtle = { version = "2.6.1", default-features = false }
