[package]
name = "fuzzy-message-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.5", default-features = false, optional = true }
curve25519-dalek = {version = "4.1.3", default-features = false, features = ["digest", "rand_core"]}
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.217", features = ["derive"], optional = true }
sha2 = "0.10.8"
thiserror = { version = "2.0.11", default-features = false }

[features]
serde = ["dep:serde", "curve25519-dalek/serde"]
borsh = ["dep:borsh"]
