[package]
name = "fuzzy-message-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = {version = "4.1.3", default-features = false, features = ["digest", "rand_core"]}
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0.217", default-features = false, features = ["derive"], optional = true }
sha2 = "0.10.8"
subtle = {  version = "2.6.1" , default-features = false}

[dev-dependencies]
criterion = "0.3"
rand_core = { version = "0.6", default-features = false , features = ["getrandom"]}

[features]
serde = ["dep:serde", "curve25519-dalek/serde"]

[[bench]]
name = "benchmark"
harness = false