[package]
name = "fuzzy-message-detection"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
serde = ["dep:serde", "curve25519-dalek/serde"]

[dependencies]
curve25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"], optional = true }
sha2 = { workspace = true, features = ["force-soft"] }
subtle = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

[[bench]]
name = "benchmark"
harness = false
