[package]
name = "polyfuzzy"
version = "0.5.0"
description = "Fuzzy message detection with randomized and compact keys"
license = "MIT"
homepage = "https://github.com/anoma/shielded-state-sync"
repository = "https://github.com/anoma/shielded-state-sync"
readme = "../README.md"
edition = "2021"

[features]
serde = ["dep:serde", "curve25519-dalek/serde"]
sha2-force-soft = ["sha2/force-soft"]
random-flag-ciphertexts = []
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]

[dependencies]
curve25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"], optional = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

[[bench]]
name = "benchmark"
harness = false
