# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "helloworld"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2021"

[lib]
name = "helloworld"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview"}
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview"}

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1", default-features = false, features = ["u64_backend"] }
# fuzzy-message-detection = { path = "../../fuzzy-message-detection"}
sha3 = { version = "0.9", default-features = false }
subtle = {  version = "2.5"}
rand_core = {version = "0.6", default-features = false}
rand_chacha = { version = "0.3", default-features = false }
